--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Vidraçaria Bertoldo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="google-site-verification" content="AW-16719127306" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
