--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="google-site-verification" content="AW-16719127306" />
+		<!-- Código da tag do Google Ads -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16719127306"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'AW-16719127306');
+		</script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -89,16 +97,12 @@
 								<a href="https://wa.me/5541995490023?text=Ol%C3%A1,%20gostaria%20de%20fazer%20um%20or%C3%A7amento." class="primary">
 									<input type="button" value="WhatsApp 2" />
 								</a>
-							</li>								
+							</li>												
 						</ul>
-						
-							</div>
-						</div>
 					</form>
 				</div>
 				<footer>
 					<ul class="icons">
-						
 						<li><a href="https://www.facebook.com/vidracariabertoldo?mibextid=ZbWKwL" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>						
 					</ul>
@@ -119,3 +123,4 @@
 
 	</body>
 </html>
+
